# fsspec_cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
include/fsspec_cpp/: bridge.hpp  fs.hpp  fsspec_c.h
python/fsspec_cpp/: __init__.py
src/: bindings.cpp  bridge.cpp  file.cpp  filesystem.cpp  fsspec_c.cpp  fsspec_c_pure.c  fsspec_fileptr.cpp
tests/: test_basic.py  test_c_api.c  test_cpp_api.cpp  test_python.c  test_simple.c
